@@ -796,7 +796,7 @@
 					<control type="group">
 						<posx>35</posx>
 						<posy>325</posy>
-						<visible>Container(525).HasFocus(8) | [Control.HasFocus(84) + Container(84).HasFocus(0)] | [stringcompare(Skin.String(defaultpanel.widget.type),$LOCALIZE[12600]) + [!Control.HasFocus(84) + [[Container(525).HasFocus(5) + IsEmpty(Skin.String(pictures.slideshowpath2))] | Container(525).HasFocus(10) | Container(525).HasFocus(11) | [Container(525).HasFocus(7) + [IsEmpty(Window(Home).Property(MostPlayedROM.1.Title)) | !Skin.HasSetting(UseRCB)]] | [Container(525).HasFocus(9) + Skin.HasSetting(settings.widget.usedefault)]]]]</visible>
+						<visible>[Container(525).HasFocus(8) + !Control.HasFocus(84) + !Control.HasFocus(83)] | [Control.HasFocus(84) + Container(84).HasFocus(0)] | [stringcompare(Skin.String(defaultpanel.widget.type),$LOCALIZE[12600]) + [!Control.HasFocus(84) + [[Container(525).HasFocus(5) + IsEmpty(Skin.String(pictures.slideshowpath2))] | Container(525).HasFocus(10) | Container(525).HasFocus(11) | [Container(525).HasFocus(7) + [IsEmpty(Window(Home).Property(MostPlayedROM.1.Title)) | !Skin.HasSetting(UseRCB)]] | [Container(525).HasFocus(9) + Skin.HasSetting(settings.widget.usedefault)]]]]</visible>
 						<animation effect="fade" start="0" end="100" time="250">Visible</animation>
 						<animation effect="fade" start="100" end="0" time="450" condition="Window.IsActive(favourites)">Conditional</animation>
 						<animation effect="fade" start="0" end="100" delay="150" time="450" condition="!Window.IsActive(favourites)">Conditional</animation>
