@@ -85,7 +85,7 @@
                 <description>current temp value</description>
                 <posx>0</posx>
                 <posy>88</posy>
-                <width>400</width>
+                <width>340</width>
                 <height>76</height>
                 <font>Font-Alaska-S34-BL</font>
                 <label>$INFO[Window.Property(Current.Temperature)]$INFO[System.TemperatureUnits]$INFO[Window.Property(Current.Condition), • ,]</label>
@@ -283,7 +283,7 @@
                 <posy>230</posy>
                 <width>206</width>
                 <height>30</height>
-                <font>Font-Condensed-S45</font>
+                <font>Font-Condensed-S42</font>
                 <label>$INFO[Window.Property(Day0.LowTemp)]$INFO[System.TemperatureUnits]$INFO[Window.Property(Day0.HighTemp), / ,]$INFO[System.TemperatureUnits]</label>
                 <textcolor>ddwhite</textcolor>
             </control>
@@ -389,7 +389,7 @@
                 <posy>230</posy>
                 <width>206</width>
                 <height>30</height>
-                <font>Font-Condensed-S45</font>
+                <font>Font-Condensed-S42</font>
                 <label>$INFO[Window.Property(Day1.LowTemp)]$INFO[System.TemperatureUnits]$INFO[Window.Property(Day1.HighTemp), / ,]$INFO[System.TemperatureUnits]</label>
                 <textcolor>ddwhite</textcolor>
             </control>
@@ -495,7 +495,7 @@
                 <posy>230</posy>
                 <width>206</width>
                 <height>30</height>
-                <font>Font-Condensed-S45</font>
+                <font>Font-Condensed-S42</font>
                 <label>$INFO[Window.Property(Day2.LowTemp)]$INFO[System.TemperatureUnits]$INFO[Window.Property(Day2.HighTemp), / ,]$INFO[System.TemperatureUnits]</label>
                 <textcolor>ddwhite</textcolor>
             </control>
@@ -601,7 +601,7 @@
                 <posy>230</posy>
                 <width>206</width>
                 <height>30</height>
-                <font>Font-Condensed-S45</font>
+                <font>Font-Condensed-S42</font>
                 <label>$INFO[Window.Property(Day3.LowTemp)]$INFO[System.TemperatureUnits]$INFO[Window.Property(Day3.HighTemp), / ,]$INFO[System.TemperatureUnits]</label>
                 <textcolor>ddwhite</textcolor>
             </control>
@@ -707,7 +707,7 @@
                 <posy>230</posy>
                 <width>206</width>
                 <height>30</height>
-                <font>Font-Condensed-S45</font>
+                <font>Font-Condensed-S42</font>
                 <label>$INFO[Window.Property(Day4.LowTemp)]$INFO[System.TemperatureUnits]$INFO[Window.Property(Day4.HighTemp), / ,]$INFO[System.TemperatureUnits]</label>
                 <textcolor>ddwhite</textcolor>
             </control>
